# dnn_pipeline_template

./: .gitattributes  .gitignore  README.md  install_env.sh  pyproject.toml  start.py
lib/: __init__.py  functional.py  logger.py  sys_utils.py  torch_utils.py
lib/config/: base_cfg.py  base_data_config.py  project_config.py  pydantic_utils.py
lib/data/: base_dataset.py  cache_dataset.py  dataloader.py  datamodule.py  utils.py
lib/modeling/: base_model.py
lib/modeling/callbacks/: attention_map_visualization_callback.py  base_metric_callback.py  perplexity_callback.py
lib/pipelines/: base_pipeline.py  common.py  utils.py
lib/utils/: argparse_utils.py  dataset_wrappers.py  functional.py  jsonref.py  multiprocess_iterator.py  progress_bar.py  serialization.py  utils.py
notebooks/: mnistaudio-audio-classification-with-cnns.ipynb
